iac/src/kubernetes/src/kind/src/web_server/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: piyo-service
  name: piyo-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: piyo-app
status:
  loadBalancer: {}
